design: 키보드 목록 페이지 퍼블리싱

--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -41,12 +41,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #323232;
+  transition: all 1s;
 }
 
 .search {
   border: none;
   outline: none;
+}
+
+.searchWrapperBorder {
+  border-bottom: 1px solid #323232;
 }
 
 .etc {
