--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,66 +1,89 @@
-.footer {
+.topFooter {
+  display: flex;
+  justify-content: space-between;
   border-top: 1px solid #d6d6d6;
-  padding: 14px 60px 21px;
-  font-size: 13px;
+  border-bottom: 1px solid #d6d6d6;
+  padding: 20px 60px 25px;
 }
 
-.footerNavList {
+.topFooterInner {
   display: flex;
-  gap: 16px;
+  gap: 19px;
+}
+
+.footerList {
+  display: flex;
+  gap: 6px;
+  font-size: 14px;
+}
+
+.footerItem::after {
+  margin-left: 6px;
+  content: "|";
+  font-weight: 400;
+}
+
+.footerItem:last-child:after {
+  content: "";
 }
 
 .personalInfo {
   font-weight: 600;
 }
 
-.footerInfo {
-  display: flex;
-  justify-content: space-between;
-}
-
-.companyInfoWrapper {
-  margin-top: 22px;
-  display: flex;
-  gap: 89px;
-}
-
-.companyInfo {
+.company {
+  margin-top: 12px;
+  font-size: 13px;
   line-height: 13px;
 }
 
-.copyright {
-  margin-top: 20px;
-}
-
-.inquiryTitle {
-  font-weight: 600;
-  line-height: 13px;
-}
-
-.tel {
-  margin-top: 5px;
-  font-size: 24px;
-  font-weight: 500;
-}
-
-.time {
-  margin-top: 10px;
-  font-weight: 400;
-}
-
-.followsWrapper {
+.topMenuWrapper {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
-.followsTitle {
-  text-align: center;
+.topMenu {
+  cursor: pointer;
 }
 
-.follows {
-  margin-top: 10px;
+.bottomFooter {
+  padding: 12px 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+}
+
+.bottomFooterInner {
   display: flex;
   align-items: center;
-  gap: 11.15px;
+  gap: 10px;
+}
+
+.customerService {
+  font-weight: 600;
+}
+
+.tel {
+  font-size: 24px;
+}
+
+.copyright {
+  font-size: 13px;
+}
+
+.timeList {
+  display: flex;
+  gap: 6px;
+  font-size: 14px;
+}
+
+.timeItem::after {
+  margin-left: 6px;
+  content: "|";
+}
+
+.timeItem:last-child:after {
+  content: "";
 }
