--- a/src/components/common/ProductInfo.css
+++ b/src/components/common/ProductInfo.css
@@ -5,7 +5,7 @@
 .productInfoHeader {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #b7b7b7;
+  border-bottom: 2px solid #111;
 }
 
 .productInfo {
@@ -72,9 +72,103 @@
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   background: #fff;
+  cursor: pointer;
+  font-size: 18px;
 }
 
 .activeColorLabel {
   border: 1px solid #767676;
+}
+
+.productTypeInfo {
+  padding: 18px 0;
+}
+
+.productTypeInfo + .productTypeInfo {
+  padding-top: 0;
+}
+
+.productTypeTitle {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.productTypeSelectBox {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 13px 16px;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid #dcdcdc;
   cursor: pointer;
+}
+
+.productTypeItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 13px 16px;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid #dcdcdc;
+  border-top: none;
+  cursor: pointer;
+}
+
+.productDeliveryInfo {
+  padding: 19px 0 16px;
+  border-bottom: 1px solid #b7b7b7;
+}
+
+.productDeliveryInfoList {
+  display: flex;
+  gap: 53px;
+}
+
+.productDeliveryInfoList + .productDeliveryInfoList {
+  margin-top: 15px;
+}
+
+.prouctDeliveryPlatformWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.prouctDeliveryPlatform {
+  display: flex;
+}
+
+.productDeliveryInfoItem {
+  font-size: 16px;
+}
+
+.productDeliveryInfoTerm {
+  font-size: 18px;
+  font-weight: 500;
+  width: 64px;
+}
+
+.productDeliveryStrong {
+  font-weight: 600;
+}
+
+.productPaymentMethod {
+  display: flex;
+  gap: 10px;
+}
+
+.productPaymentBtn {
+  width: 50%;
+}
+
+.productPaymentBtn .productPaymentImg {
+  width: 100%;
+}
+
+.productPurchaseBtnWrapper {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
