--- a/src/components/agreement/Contents.css
+++ b/src/components/agreement/Contents.css
@@ -68,3 +68,18 @@
   display: flex;
   align-items: center;
 }
+
+.agreementWrapper .footer {
+  margin-top: 97px;
+  display: flex;
+  justify-content: center;
+}
+
+.agreementWrapper .confirmBtn {
+  padding: 16px 165px;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 5px;
+  background-color: #111;
+  color: #fff;
+}
