design: 리뷰 페이지 퍼블리싱

--- a/src/components/layout/Menu.css
+++ b/src/components/layout/Menu.css
@@ -25,3 +25,12 @@
   align-items: center;
   gap: 10px;
 }
+
+.menuItem .link {
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
