--- a/src/components/login/Contents.css
+++ b/src/components/login/Contents.css
@@ -1,23 +1,23 @@
-.loginWrapper {
+.wrapper {
   height: calc(100vh - 329px);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.loginForm {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.loginTitle {
+.title {
   font-size: 32px;
   font-weight: 700;
   margin-bottom: 55px;
 }
 
-.loginInput {
+.input {
   width: 449px;
   font-size: 14px;
   padding: 16px 10px;
@@ -25,15 +25,15 @@
   border-radius: 5px;
 }
 
-.loginInput + .loginInput {
+.input + .input {
   margin-top: 10px;
 }
 
-.loginInput:focus {
+.input:focus {
   outline: none;
 }
 
-.loginInput::placeholder {
+.input::placeholder {
   color: #a4a4a4;
 }
 
@@ -67,7 +67,7 @@
   accent-color: #2c2c2c;
 }
 
-.loginInfoWrapper {
+.infoWrapper {
   padding: 8px 0 20px;
   width: 100%;
   display: flex;
@@ -75,13 +75,13 @@
   align-items: center;
 }
 
-.loginInfoSavedWrapper {
+.infoSavedWrapper {
   font-size: 14px;
   display: flex;
   align-items: center;
 }
 
-.loginInfoFinder {
+.infoFinder {
   color: #111;
   font-size: 13px;
 }
