--- a/src/views/ProductDetailView.css
+++ b/src/views/ProductDetailView.css
@@ -1,10 +1,10 @@
-.productDetailWrapper {
+.wrapper {
   padding: 100px 143px;
   display: flex;
   gap: 80px;
   height: auto;
 }
 
-.productDetailImgWrapper {
+.detailImgWrapper {
   margin-top: 180px;
 }
