--- a/src/components/common/PaymentInfo.css
+++ b/src/components/common/PaymentInfo.css
@@ -1,5 +1,6 @@
 .paymentInfoWrapper {
-  margin-top: 83px;
+  position: sticky;
+  top: 32px;
   padding: 22px 20px;
   border-radius: 6px;
   border: 1px solid #a5a5a5;
