--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -24,13 +24,16 @@
   font-size: 32.08px;
   font-weight: 700;
   line-height: 100%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
+  top: 50%;
   left: 50%;
 }
 
 .titleLink {
   color: #000;
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .titleLink:visited {
