--- a/src/components/common/Language.css
+++ b/src/components/common/Language.css
@@ -1,4 +1,4 @@
-.languageWrapper {
+.wrapper {
   background-image: url("../../assets/images/languageWrapper.svg");
   width: 55px;
   height: 24px;
