--- a/src/components/faq/Faq.css
+++ b/src/components/faq/Faq.css
@@ -1,8 +1,8 @@
-.wrapper {
+.questionWrapper {
   border-bottom: 1px solid #cfcfcf;
 }
 
-.questionWrapper {
+.questionInner {
   padding: 32px;
   font-size: 16px;
   font-weight: 500;
@@ -11,10 +11,22 @@
   align-items: center;
 }
 
-.questionWrapperLeftSide {
+.questionSide {
   display: flex;
   align-items: center;
   gap: 32px;
+}
+
+.questionType {
+  color: #d4d4d4;
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.questionTag {
+  padding: 6px 29px;
+  border-radius: 50px;
+  border: 1px solid #1e1e1e;
 }
 
 .answerWrapper {
@@ -27,20 +39,8 @@
   background-color: #f8f8f8;
 }
 
-.questionType {
-  color: #d4d4d4;
-  font-size: 36px;
-  font-weight: 600;
-}
-
 .answerType {
   color: #747474;
   font-size: 36px;
   font-weight: 600;
-}
-
-.tag {
-  padding: 6px 29px;
-  border-radius: 50px;
-  border: 1px solid #1e1e1e;
 }
