--- a/src/components/notice/Notices.css
+++ b/src/components/notice/Notices.css
@@ -32,7 +32,8 @@
   align-items: center;
 }
 
-.paginationArrow {
+.arrow {
+  cursor: pointer;
   padding: 16px;
 }
 
@@ -43,5 +44,6 @@
 }
 
 .paginationItem {
+  cursor: pointer;
   padding: 16px;
 }
