--- a/src/components/common/PaymentInfo.css
+++ b/src/components/common/PaymentInfo.css
@@ -1,4 +1,4 @@
-.paymentInfoWrapper {
+.wrapper {
   position: sticky;
   top: 32px;
   padding: 22px 20px;
@@ -7,12 +7,12 @@
   height: 356px;
 }
 
-.paymentInfoWrapper .title {
+.title {
   font-size: 24px;
   font-weight: 600;
 }
 
-.paymentInfoWrapper .table {
+.table {
   margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -22,36 +22,36 @@
   row-gap: 24px;
 }
 
-.paymentInfoWrapper .head {
+.head {
   color: #828282;
   font-size: 20px;
   font-weight: 600;
 }
 
-.paymentInfoWrapper .data {
+.data {
   text-align: right;
 }
 
-.paymentInfoWrapper .currency {
+.commonCurrency {
   font-size: 18px;
   font-weight: 400;
 }
 
-.paymentInfoWrapper .btn {
+.totalPrice {
+  margin-top: 40px;
+  border-top: 1px solid #d0d0d0;
+  padding-top: 8px;
+  text-align: right;
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.btn {
   margin-top: 21px;
   padding: 24px 146px;
   border-radius: 5px;
   background: #202020;
   color: #fff;
   font-size: 22px;
-  font-weight: 600;
-}
-
-.paymentInfoWrapper .totalPrice {
-  margin-top: 40px;
-  border-top: 1px solid #d0d0d0;
-  padding-top: 8px;
-  text-align: right;
-  font-size: 26px;
   font-weight: 600;
 }
