--- a/src/components/layout/CommonNav.css
+++ b/src/components/layout/CommonNav.css
@@ -20,7 +20,6 @@
   position: absolute;
   top: 0;
   left: 0;
-
   display: flex;
 }
 
@@ -30,7 +29,7 @@
   cursor: pointer;
 }
 
-.navItem.active {
+.active {
   cursor: default;
   font-size: 20px;
   font-weight: 600;
