--- a/src/components/login/Contents.css
+++ b/src/components/login/Contents.css
@@ -37,12 +37,16 @@
   color: #a4a4a4;
 }
 
-.commonLoginBtn {
+.commonBtn {
   padding: 15px 0;
   width: 100%;
   font-size: 16px;
   font-weight: 600;
   border-radius: 5px;
+}
+
+.commonBtn + .commonBtn {
+  margin-top: 10px;
 }
 
 .loginBtn {
@@ -56,11 +60,7 @@
   color: #000;
 }
 
-.commonLoginBtn + .commonLoginBtn {
-  margin-top: 10px;
-}
-
-.saveCheckBox {
+.idSavedCheckBox {
   margin-right: 6px;
   width: 18px;
   height: 18px;
