--- a/src/assets/css/adminHome/Contents.css
+++ b/src/assets/css/adminHome/Contents.css
@@ -1,6 +1,6 @@
 .container{
     height: 100vh;
-    background-color: #d2d2d2;
+    background-color: #F1F1F1;
     padding: 32px;
 }
 .title{
@@ -19,6 +19,8 @@
 .selected{
     font-weight: bold;
     text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-thickness: 2px;
 }
 .wrapper{
     font-size: 16px;
@@ -29,11 +31,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #d2d2d2;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
     border-radius: 7px;
     background-color: white;
     width:100%;
     height:125px;
+    transition: linear .1s;
+}
+.addBtn:hover{
+    box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.15);
 }
 .addBtnImg{
     width: 100%;
