--- a/src/assets/css/modal/Contents.css
+++ b/src/assets/css/modal/Contents.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .background{
     position: absolute;
@@ -39,4 +40,30 @@
     right: 0;
     padding: 12px;
     cursor: pointer;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0px 10px 0px;
+}
+
+.nextBtn{
+    background-color: #d9d9d9;
+    align-self: center;
+    text-align: center;
+    width: 100px;
+    height: 46px;
+    border-radius: 5px;
+}
+.nextBtn:hover{
+    background-color: #C5C5C5;
+}
+.contents{
+    display: flex;
+    width: 590px;
+    overflow: hidden;
+}
+.productEl, .categoryEl{
+
 }
