--- a/src/assets/css/modal/CheckModal.css
+++ b/src/assets/css/modal/CheckModal.css
@@ -1,5 +1,12 @@
+.preventTouch{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
 .wrapper{
     position: absolute;
+    z-index: 1;
 }
 
 .checkModal{
