--- a/src/assets/css/modal/EnrollProductDetail.css
+++ b/src/assets/css/modal/EnrollProductDetail.css
@@ -1,16 +1,28 @@
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        padding: 8px;
+    margin-top: 12px;
+}
+.textArea{
+    width:450px;
+}
 .textBox {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 590px;
-    margin-top: 20px;
-    margin-bottom: 30px;
+    width: 450px;
+    height: 46px;
+        margin: 10px 0px;
 }
 
 .title {
     font-size: 16px;
     font-weight: 600;
     margin-right: 10px;
+    width: 110px;
+    text-align: right;
 }
 
 .inputBox {
@@ -36,15 +48,15 @@
 }
 
 .addCategoryBtn {
-    width: 100px;
-    height: 43px;
+    width: 110px;
+    height: 158px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #616161;
     background-color: #DADADA;
     font-size: 16px;
-    margin: 6px;
+    margin-left: 10px;
     cursor: pointer;
 }
 
@@ -53,35 +65,64 @@
 }
 
 .listBox {
-    width: 550px;
-    height: 260px;
+    width: 560px;
+    height: 200px;
     font-size: 16px;
     border: 1px solid #7e7e7e;
     margin: auto;
     overflow-y: scroll;
 }
 
-.categoryBox {
+.listCard{
+    display: flex;
+    align-items: center;
+    border: 1px solid #C5C5C5;
+    font-size: 16px;
+    padding: 4px;
+    height: 35px;
+}
+.productBox {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    height: 40px;
     padding: 4px;
     border-bottom: 1px solid #7e7e7e;
 }
 
-.categoryBox .categoryName {
+.productBox .productName {
+    text-align: center;
+    width:160px;
     font-size: 16px;
     background-color: white;
     font-weight: 600;
     padding: 6px;
+    margin: 0px 5px;
+}
+.productBox .productPrice {
+    text-align: center;
+    width:110px;
+    font-size: 16px;
+    background-color: white;
+    font-weight: 600;
+    padding: 6px;
+    margin: 0px 5px;
+}
+.productBox .productStock {
+    text-align: center;
+    width:65px;
+    font-size: 16px;
+    background-color: white;
+    font-weight: 600;
+    padding: 6px;
+    margin: 0px 5px;
 }
 
 .buttonBox {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70px;
+    width: 150px;
 }
 
 .editBtn {
