--- a/src/assets/css/modal/Contents.css
+++ b/src/assets/css/modal/Contents.css
@@ -50,7 +50,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 0px 10px 0px;
+    padding: 10px 0px 10px 0px;
 }
 
 .nextBtn{
@@ -60,6 +60,7 @@
     width: 100px;
     height: 46px;
     border-radius: 5px;
+    margin: 0px 4px;
 }
 .nextBtn:hover{
     background-color: #C5C5C5;
