--- a/src/assets/css/modal/EnrollProduct.css
+++ b/src/assets/css/modal/EnrollProduct.css
@@ -77,3 +77,16 @@
 .deleteBtn{
     cursor: pointer;
 }
+.submit{
+    display: flex;
+    justify-content: right;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+.submitBtn{
+    width: 70px;
+    height: 30px;
+    background-color: #d9d9d9;
+    border-radius: 3.5px;
+    margin: 4px;
+}
