--- a/src/assets/css/modal/EnrollCategory.css
+++ b/src/assets/css/modal/EnrollCategory.css
@@ -75,6 +75,12 @@
     background-color: white;
     font-weight: 600;
     padding: 6px;
+    cursor: pointer;
+}
+.categoryName:focus{
+    outline: none;
+}
+.categoryName:hover{
 }
 
 .buttonBox {
