product enroll완료, product Category Get완료, post 오류 발생, put default 설정

--- a/src/assets/css/adminProduct/Cards.css
+++ b/src/assets/css/adminProduct/Cards.css
@@ -13,6 +13,8 @@
 .productRepresentImg{
     padding: 12px;
     width:160px;
+    height: 125px;
+    object-fit: scale-down;
 }
 .iconBox{
     display: flex;
