--- a/src/assets/css/adminHome/Contents.css
+++ b/src/assets/css/adminHome/Contents.css
@@ -45,3 +45,13 @@
     width: 100%;
     height: 40px;
 }
+.CheckModal{
+    position: fixed;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
