--- a/src/assets/css/modal/CheckModal.css
+++ b/src/assets/css/modal/CheckModal.css
@@ -20,9 +20,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: 120px;
 }
 .comment{
+    margin: 20px;
     font-size: 16px;
     color: #ee2020;
 }
