--- a/src/assets/css/modal/Contents.css
+++ b/src/assets/css/modal/Contents.css
@@ -70,6 +70,8 @@
     width: 590px;
     overflow: hidden;
 }
+.mainEnrollModal{
+    width: 100%; overflow-y: scroll; height: 660px
+}
 .productEl, .categoryEl, .detailEl{
-
 }
