--- a/src/assets/css/modal/EnrollProductMain.css
+++ b/src/assets/css/modal/EnrollProductMain.css
@@ -2,14 +2,12 @@
     padding: 12px;
     background-color: white;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     flex-wrap: wrap;
-    overflow-y: scroll;
-    height: 660px;
 }
 .productCard{
-    width: calc(45% - 24px); /* 기존 width에서 margin 값을 빼서 설정 */
+    width: calc(50% - 26px);
     border-radius: 10px;
     border: 3px solid #C5C5C5;
     overflow: hidden;
@@ -35,14 +33,19 @@
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 4px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+        overflow: hidden;
 }
 .cardContent{
     font-size: 16px;
 }
 .imgBox{
     width: 100%;
-    margin-right: 20px;
+    height: 220px;
 }
 .img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
