detailProduct data bind

--- a/src/assets/css/productDetail/Contents.css
+++ b/src/assets/css/productDetail/Contents.css
@@ -4,7 +4,18 @@
   gap: 80px;
   height: auto;
 }
+.container{
+  width: 960px;
+}
+.representImg{
+  object-fit: cover;
+  width: 100%;
+}
 
 .detailImgWrapper {
   margin-top: 32px;
+}
+.detailImg{
+  width: 100%;
+  object-fit: cover;
 }
