--- a/src/assets/css/common/ProductInfo.css
+++ b/src/assets/css/common/ProductInfo.css
@@ -64,22 +64,24 @@
   font-weight: 500;
   border: 1px solid #dcdcdc;
   cursor: pointer;
+  
 }
 
 .characterList {
   margin-top: 10px;
   display: flex;
-  gap: 10px;
 }
 
 .characterItem {
   padding: 13px 18px;
+  margin-right: 10px;
   font-size: 16px;
   font-weight: 500;
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   background: #fff;
   cursor: pointer;
+  display: block;
 }
 
 .active {
