--- a/src/assets/css/common/ProductInfo.css
+++ b/src/assets/css/common/ProductInfo.css
@@ -41,13 +41,16 @@
   align-items: center;
 }
 
+.characterInfoWrapper {
+  border-bottom: 1px solid #dcdcdc;
+}
+
 .characterInfo {
   padding: 18px 0;
 }
 
 .characterInfo + .characterInfo {
   padding-top: 0;
-  border-bottom: 1px solid #dcdcdc;
 }
 
 .characterTitle {
