장바구니 멀티 옵션 상품 바인딩 및 사진 기입

--- a/src/assets/css/basket/Contents.css
+++ b/src/assets/css/basket/Contents.css
@@ -72,15 +72,14 @@
 
 .pickedContentWrapper{
 }
-.partPick{
+.picked{
   margin: 6px 0px;
 }
+
 .hidden{
   display: none;
 }
 
-.normalPick{
-}
 
 .paymentInfoWrapper {
   margin-top: 83px;
