--- a/src/assets/css/mypage/Title.css
+++ b/src/assets/css/mypage/Title.css
@@ -3,7 +3,17 @@
     font-weight: bold;
     border-bottom: 1px solid black;
     width: 1080px;
-    text-align: left;
-    padding-bottom: 15px;
-    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 7px;
+    align-items: center;
+}
+.reviewBtn{
+    font-size: 16px;
+    width: 85px;
+    height: 30px;
+    text-align: center;
+    background: #7c7c7c;
+    border-radius: 4px;
+    color: white;
 }
