--- a/src/assets/css/myaskReview/WriteAsk.css
+++ b/src/assets/css/myaskReview/WriteAsk.css
@@ -1,25 +1,82 @@
 .wrapper{
-    width:100%;
 }
 
 .form{
-    width: 100%;
     height: 100%;
-    padding: 12px;
+    padding: 12px 0px;
 }
 .askTypeBox{
     display: flex;
     align-items: center;
 }
-.typeLabel{
+.askLabel{
     width: 155px;
-    font-size: 14px;
-}
-.typeOption{
-    width: 140px;
+    text-align: left;
     font-size: 14px;
 }
 
+.typeOption{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 138px;
+    border: 1px solid #C2C2C2;
+    margin-right: 5px;
+}
+.typeWrapper{
+    font-size: 14px;
+    display:flex;
+    justify-content: space-between;
+    width: 110px;
+}
+
 .askInput{
-    width: 830px;
+    display: flex;
+    align-items: center;
+    height:40px;
+    width: 778px;
+    border: 1px solid #C2C2C2;
+}
+.askTitle{
+    padding-left: 12px;
+    border: none;
+}
+.askContentBox{
+    display: flex;
+    margin-top: 10px;
+    border-bottom: 1px solid #525252;
+}
+.askContent{
+    width: 920px;
+    height: 270px;
+    border: 1px solid #C2C2C2;
+}
+.askContentInput{
+    border-radius: 0px;
+    padding-left:20px;
+    border:none;
+}
+.btnBox{
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn{
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border: 1px solid #6A6A6A;
+    margin-right:10px;
+    color: black;
+}
+.btn:hover{
+    background-color: #111111;
+    color: white;
 }
