--- a/src/assets/css/signup/Contents.css
+++ b/src/assets/css/signup/Contents.css
@@ -43,6 +43,7 @@
 
 .data {
   padding: 15px 30px;
+  display: flex;
 }
 
 .duplicatedBtn {
@@ -53,6 +54,7 @@
   margin-left: 6px;
   font-size: 14px;
   color: #f00;
+  align-self: center;
 }
 
 .signupBtn {
@@ -145,6 +147,26 @@
   font-size: 14px;
 }
 
+.verifyNumberWrapper{
+  margin: 0px 15px;
+  padding: 8px 15px 8px 10px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #8c8c8c;
+  width: 200px;
+}
+
+.verifyBtn{
+  padding: 8px 12px;
+  border-radius: 3px;
+  border: 1px solid #8c8c8c;
+  background-color: #fff;
+  flex-shrink: 0;
+  color: #5e5e5e;
+  font-size: 14px;
+}
+
 .addressWrapper {
   display: flex;
   flex-direction: column;
@@ -173,6 +195,7 @@
 
 .error{
   font-size: 12px;
-    padding: 12px;
-    color: red;
+  padding: 12px;
+  color: red;
+  align-content: center;
 }
