--- a/src/assets/css/myaskReview/AskMain.css
+++ b/src/assets/css/myaskReview/AskMain.css
@@ -50,14 +50,35 @@
     margin-left: 30px;
 }
 
-.askContent{
+.askContainer{
     width: 100%;
+    border-bottom: 1px solid #E1E1E1;
+    min-height: 90px;
+}
+.content{
     font-size: 14px;
     padding: 16px;
-    border-bottom: 1px solid #E1E1E1;
-    min-height: 100px;
+    min-height: 50px;
 }
-.ansContent{
+
+.btnBox{
+    display: flex;
+    padding: 16px;
+    justify-content: right;
+    align-items: center;
+    gap: 5px;
+}
+.contentBtn{
+    width: 60px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #B8B8B8;
+    font-size: 14px;
+    align-content: center;
+    text-align: center;
+}
+
+.ansContainer{
     width: 100%;
     font-size: 14px;
     padding: 16px;
