--- a/src/assets/css/myaskReview/TextArea.css
+++ b/src/assets/css/myaskReview/TextArea.css
@@ -24,9 +24,13 @@
     box-sizing: border-box; 
 }
 .fileBox{
+    margin: 15px 0px;
     display: flex;
     align-items: center;
-    margin: 15px 0px;
+}
+.imageWrapper{
+    position: relative;
+    margin-right: 5px;
 }
 .addFileBtn{
     width: 70px;
@@ -34,16 +38,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 5px;
     border: 1px solid #C2C2C2;
     background-color: #F6F6F6;
+    cursor: pointer;
 }
 .addRuleText{
     font-size: 16px;
     margin-left: 5px;
 }
 .previewImage {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.removeFileBtn{
+    position: absolute;
+    right: 0;
+    top: 0;
 }
