어드민 페이지 1:1 문의 이미지 작업

--- a/src/assets/css/myaskReview/AskMain.css
+++ b/src/assets/css/myaskReview/AskMain.css
@@ -90,6 +90,17 @@
     min-height: 100px;
 }
 
+.modalContainer{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .whiteColor{
     color: black;
 }
