1:1 문의 관리자페이지 완료 & 권한별 리다이렉트(관리자 페이지 접근 권한)

--- a/src/assets/css/adminInquire/Contents.css
+++ b/src/assets/css/adminInquire/Contents.css
@@ -55,6 +55,7 @@
 
 .content {
   margin-bottom: 10px;
+  min-height: 50px;
 }
 
 .ImgAndBtnBox {
@@ -83,7 +84,7 @@
 .replyTextarea {
     width: calc(100% - 12px);
     height: 100px;
-    margin: 10px 0px;width: 100%;
+    margin: 10px 0px;
     height: 100px;
     margin-top: 10px;
     border: 1px solid #ddd;
@@ -100,4 +101,8 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
+}
+
+.redColor{
+  color: red;
 }
