--- a/src/assets/css/myaskReview/ImgModal.css
+++ b/src/assets/css/myaskReview/ImgModal.css
@@ -18,8 +18,11 @@
 .modalImage {
     min-width: 30vw;
     min-height: 30vh;
-  max-width: 90vw;
-  max-height: 90vh;
+    max-width: 60vw;
+    max-height: 60vh;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .downloadBtn {
