--- a/src/assets/css/layouts/AdminSideBar.css
+++ b/src/assets/css/layouts/AdminSideBar.css
@@ -19,10 +19,27 @@
     display: flex;
 }
 
-.list:hover{
+.listdownBox{
+    background-color: #F6F6F6;
+    padding: 12px;
+    border-radius: 6px;
+}
+.listdown{
+    padding: 12px;
+    font-size: 18px;
+    border-radius: 6px;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.listdown:hover,.list:hover{
     background-color: #d2d2d2;
 }
 
+.selectedListdown{
+    font-weight: 600;   
+}
 .selected{
     background:#e9e9e9;
     font-weight: 600;
