--- a/src/assets/css/adminBoard/BoardList.css
+++ b/src/assets/css/adminBoard/BoardList.css
@@ -16,6 +16,11 @@
     align-items: center;
     justify-content: center;
 }
+.img{
+    width:70px;
+    height: 70px;
+    object-fit: cover;
+}
 .first, .second, .third, .fourth, .fifth{
     border-bottom: 1px solid #E8E8E8;
     text-align: center;
@@ -28,6 +33,10 @@
 }
 .second{
     width: 15%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
 } 
 .third{
     width: 62%;
@@ -42,7 +51,6 @@
 .content{
     height: 100%;
     height: 90px;
-
 }
 .textCenter{
     text-align: center;
