--- a/src/assets/css/layouts/AdminHeader.css
+++ b/src/assets/css/layouts/AdminHeader.css
@@ -1,29 +1,12 @@
 .headerBox{
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
-    padding: 12px;
-}
-.wrapper{
-    padding: 6px;
-    border:  1px solid #888888;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.search{
-    border: 0px;
-}
-.search:focus{
-    outline: none;
-}
-.searchBtn{
-    width:25px;
-    height:25px;
+    padding: 31px;
 }
 
 .headerSpan{
     font-size: 18px;
+    font-weight: 500;
     margin-right:6px;
 }
